# validarRFC-MX

./: .env.local.bak  .gitignore  ACTUALIZAR_GOOGLE_OAUTH_DOMINIO.md  ACTUALIZAR_REMOTE_CORRECTO.md  ANALISIS_ESTRUCTURA_PRECIOS.md  ANUNCIO_VENTA.md  ANUNCIO_VENTA_COMPLETO.md  API_DOCUMENTATION.md  API_KEYS_ANALYSIS.md  ARCHITECTURE.md  BRAND_GUIDE.md  BUSINESS_ANALYSIS.md  BUSINESS_ANALYSIS_USD.md  BUSINESS_MODEL_ANALYSIS.md  CAMBIAR_NOMBRE_PROYECTO_VERCEL.md  CAMBIAR_PAIS_STRIPE_MEXICO.md  CHECKLIST_CONFIGURACION_COMPLETA.md  CHECKLIST_DOMINIO_COMPLETO.md  CHECKLIST_FINAL.md  CHECKLIST_FINAL_VENTA.md  CHECKLIST_PREPARACION_VENTA.md  CHECKLIST_VERIFICACION_FINAL.md  COMO_FUNCIONA_STRIPE_INGRESOS.md  COMO_OBTENER_DOMINIO_VERCEL.md  COMPETITIVE_POSITIONING.md  CONECTAR_DOMINIO_VERCEL.md  CONFIGURACION_COMPLETA_HOY.md  CONFIGURACION_COMPLETA_RESEND.md  CONFIGURACION_GOOGLE_CONSOLE_MVP.md  CONFIGURACION_STRIPE_COMPLETA.md  CONFIGURACION_SUPABASE_MVP.md  CONFIGURAR_GIT_IDENTIDAD.md  CONFIGURAR_RESEND.md  CONFIGURAR_STORAGE_AVATARES.md  CONFIGURAR_STRIPE_AHORA.md  CONFIGURAR_STRIPE_MVP.md  COPIAR_SQL_AQUI.md  CORREGIR_ERRORES_ESLINT.md  COSTS.md  CREDENCIALES_ACTUALES.md  (+161 more)
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
lib/: api-keys.ts  blacklist.ts  email.ts  env-utils.ts  jwt-utils.ts  logger.ts  plans.ts  rate-limit.ts  redis.ts  rfc.ts  stripe.ts  utils.ts
public/: BingSiteAuth.xml  pwa.webmanifest  site.webmanifest  sitemap.xml  sw.js
services/rust/actix/: Cargo.toml  Dockerfile
services/rust/actix/src/: main.rs
terraform/: main.tf  variables.tf  (+1 more)
(+145 files in other folders)
